--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
 streamlit==1.35.0
-pandas
-numpy
-scikit-learn
-xgboost
-joblib
-plotly
-rapidfuzz
-streamlit-chat
-streamlit-lottie
-emoji
-matplotlib
-seaborn
-scipy
-requests
-Pillow
-python-dotenv
+pandas==2.2.3
+numpy==2.1.3
+scikit-learn==1.6.1
+xgboost==3.0.5
+joblib==1.4.2
+plotly==5.24.1
+rapidfuzz==3.14.1
+streamlit-chat==0.1.1
+streamlit-lottie==0.0.5
+emoji==2.14.1
+matplotlib==3.10.0
+seaborn==0.13.2
+scipy==1.15.3
+requests==2.32.3
+Pillow==11.1.0
+python-dotenv==1.0.1
